deployment/manifests/tesla/db-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tesla-db
  labels:
    app: teslamate
    component: db
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: db
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: teslamate
    component: db
