deployment/manifests/tesla/teslamate-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  labels:
    app: teslamate
    component: main
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: teslamate
    component: main
